--- a/180326/chungnam/index.html
+++ b/180326/chungnam/index.html
@@ -49,10 +49,10 @@
                         <p>급변하는 국내외 정세 속에 대통령에게는 커다란 결단이 요구될 때가 많았다. 역대 대통령들은 국정운영의 중대한 고비에서 청남대에 머물며 정국에 대한 구상을 하였고, 이때 내린 결단들은 역사를 뒤바꿔왔다. 이것이 바로『청남대 구상』이다. 그 밖에 청남대에서 국빈을 맞이하기도 했다.</p>
                 </div>
                 <div class="links">
-                    <a href="sub/page1.html" class="btn">청남대 둘러보기</a>
-                    <a href="sub/page2.html" class="btn">청남대 지도보기</a>
-                    <a href="sub/page3.html" class="btn">주변 관광정보</a>
-                    <a href="sub/page4.html" class="btn">이용 안내</a>
+                    <a href="page1.html" class="btn">청남대 둘러보기</a>
+                    <a href="page2.html" class="btn">청남대 지도보기</a>
+                    <a href="page3.html" class="btn">주변 관광정보</a>
+                    <a href="page4.html" class="btn">이용 안내</a>
                 </div>
             </main>
         </div>
