3페이지 내용 추가

--- a/180326/chungnam/page3.html
+++ b/180326/chungnam/page3.html
@@ -45,7 +45,7 @@
                 <div class="list">
                     <!-- <div class="item detail"> -->
                     <div class="item">
-                        <button type="button" class="icon schedule">
+                        <button type="button" class="icon schedule" onclick="location.href='app://place1'">
                             <span>스케쥴</span>
                         </button>
                         <button type="button" class="icon close">
@@ -85,42 +85,183 @@
                     </div>
                     <!-- <div class="item detail"> -->
                     <div class="item">
-                        <button type="button" class="icon schedule">
+                        <button type="button" class="icon schedule" onclick="location.href='app://place2'">
                             <span>스케쥴</span>
                         </button>
                         <button type="button" class="icon close">
                             <span>닫기</span>
                         </button>
                         <a href="#" class="itemLink">
-                            <div class="title">악휘봉1(樂輝峰)</div>
+                            <div class="title">희양산(曦暘山)</div>
                             <div class="img">
-                                <img src="images/page3/yakhwi_01.jpg" alt="">
+                                <img src="images/page3/huiyang.jpg" alt="">
                             </div>
                             <div class="phone">전화 : 043-830-3421</div>
                         </a>
                         <div class="cont">
-                            <p>악휘봉은 괴산군 연풍면과 칠성면 경계에 위치한 해발 845m의 산으로 백두대간의 본 줄기에서 한발짝 벗어난 절경의 산이다.</p>
-                            <p>악휘봉의 정상부근은 온통 기암괴석과 노송, 고사목으로 이루어져 한폭의 동양화를 연상케하는데 인근의 희양산에 비하여 바위의 덩치가 작을뿐 모양이나 기묘한 형상은 더 없이
-                                아기자기하며 아름답다. 장바우 다리에서 10분쯤 가면 잘생긴 소나무 한그루가 아주 점잖게 서 있는데 마을 사람들은 이 나무를 가리켜 관송이라 부른다. 벼슬아치들의
-                                관모를 닮았다하여 붙여진 이름이다. 그 옆에는 입석마을에 골골이 전해오는 얘기를 기록해 놓은 마을 자랑비가 자상하다. 입석마을에 도착하면 악휘봉 산 전체가 한눈에
-                                들어온다. </p>
-                            <p>산행코스는 입석마을의 음지말 회관앞 광장에서 마을 가운데로 난 하천을 따라 다리를 두 번 건너 5분쯤가면 왼쪽으로 계류를 건너게 되며 수렛길을 따라 25분쯤 더 가게
-                                되면 Y자 갈림길이 나온다. 오른쪽길은 하산로이며, 왼쪽은 은티골 계곡을 택해 5분정도 더 가면 집바위가 나오는데 6.25때 마을 사람들의 피난처였으며 지금은
-                                비오기를 기원하는 기우제를 올리는 곳이다. 집바우에서 50m더 가면 반석을 타고 흘러 내리는 계류가 쉼터를 제공해 주고 여기서 물을 채워야 한다. 높은 나무가
-                                하늘을 가린 호젓한 산속길은 평탄하게 이어지나, 고개까지 5분을 남기고는 가파라지기 시작하는데 쉼터를 떠나 30분정도면 은티로 넘어가는 안부 사거리에 닿게 된다.
-                                고개를 넘으면 은티마을이고 왼쪽으로 난 길은 마분봉 가는 길로 30분 정도면 마분봉 정상에 닿을 수 있다. </p>
-                            <p>잠시 숨을 돌리고 오른쪽 바위를 휘돌아 오르면 몇 군데 훤히 트인 전망 좋은 장소가 있는데, 뒤돌아 보면 첩첩이 쌓인 산들과 가까이 무분봉이 환상적인 조화를 이룬다.
-                                바위틈새를 맨몸으로도 간신히 빠지는 세미클라이밍 코스를 오르고 안부에서 30분정도면 동쪽 희양산, 구왕봉을 거쳐온 소백산맥이 맞닿고 100미터정도 더 가면 다시
-                                소백산맥은 서쪽으로 악휘봉, 덕가산, 칠보산등 기기 묘묘한 바위산을 빚어내고 그 구비를 90도 돌려 장성봉을 향해 줄달음 친다. 장성봉 갈림길에서 10분쯤 서쪽으로
-                                가면 악휘봉의 최고 걸작품 선바위 앞에 닿는다. 벼랑위에 4미터 정도의 높이로선 입석(立石)은 밑부분이 파석형태여서 보는이로 하여금 안타까움을 연출하고 있으며
-                                여기서 정상은 2-3분 거리에 있다. 정상에는 악휘봉 표지석이 자그마하게 서 있으며 이곳에서의 조망은 감탄을 금치 못한다. </p>
-                            <p>북에서 동으로 멀게는 월악영봉에서부터 신선봉, 조령산, 주흘산 구비구비 아흔아홉 고개 이화령이 넘실거리고 동쪽으로 구왕봉, 희양산, 이만봉 서쪽으로 덕가산, 칠보산,
-                                군자산의 위용이 눈앞에 거대한 파도처럼 일렁거린다. 하산은 서쪽으로 난 길을 10분정도 비탈길을 내려서면 보기에도 아찔한 바위가 앞을 가로막아 도저히 길이 있을
-                                것 같지도 않지만 바위 40여미터 밧줄이 그나마 가야할 길임을 알려준다. 짜릿한 스릴을 맛보며 기어 오르는 바윗길은 마치 암벽 등반가라도 된 느낌이다. 힘겹게
-                                올라보면 역시 보는 즐거움이 크다. 노송과 바위가 빚어낸 형용키 어려운 악휘봉의 모습에 쉽게 발걸음을 떼지 못하게 한다. </p>
-                            <p>잠시 숨을 돌리고 가파른길(마사토로 미끄럼주의)을 내려서면 하산길의 안부에 닿는다. 안부에서 북쪽의 하산길은 경사가 급해 뛰다시피 하여 내려오게 된다. 안부에서 25분
-                                정도면 옹달샘처럼 생긴 계류의 샘에 닿고 목을 축인 후 5분정도 내려오면 올라갈 때의 Y자 갈림길까지 오게 된다. 여기서 입석마을까지는 30분이면 여유있게 갈
-                                수 있다.</p>
+                            <P>
+                                희양산은 백두 대간의 산이다. 경북 문경시 가은읍과 경계를 이루는산으로 빼어난 경치와 천 년고찰 봉암사(신라 헌강왕 5년 서기 879년)를 안고 있는 산이다.
+                            </P>
+                            <P>
+                                정상의 위치는 경북에 속해 있지만 봉암사가 조계종 스님들의 선수련장으로 일반인들의 출입 을 철저히 통제하고 있기 때문에 희양산을 찾는 등산객들은 연풍의 은티마을을 들머리로 산 행을 시작해야 한다. 산을 바라보는 모습이야
+                                경북쪽에서 보면 화강암으로 이루어진 바위봉이 장엄하기까지 하지만 등산의 아기자기한 즐거움은 은티마을에서 오르는 것이 훨씬 재미있다. 연풍에서 은티마을까지는 버스가
+                                다니지 않으므로 승용차나 택시를 이용해야 한다. 은티마을 에서 지름티재를 향해 1시간정도 가면 닿는다. 여기서부터 산행이 시작된다.
+                            </P>
+                            <P>
+                                정상 못미쳐 세미클라이밍을 해야하는 바위벽에 닿게 되는데 여기서부터 조심을 해야한다. 아 래가 까마득한 절벽이며 자칫 미끄러지거나 발을 잘못 디디거나 할 경우 사고를 당할 우려가 있기 때문이다. 정상은 남쪽으로 10분정도
+                                더 가야하지만 5백미터의 외능선이 수평을 이룬위 에 빚어논 바위들이 기기묘묘하고 바위끝에서 내려다 보는 봉암사의 까만 기와지붕이 감회를 불러 일으키고 20리 봉암사
+                                계곡이 소나무숲에 쌓여 진풍경을 연출한다.
+                            </P>
+                            <P>
+                                백두 대간을 달려오는 백호산과 이만봉이 가까이에 서 있고 원북리 계곡이 깊게 느껴지는 이 곳 정상 동쪽으로는 열린 바위가 있어 10여명이 편히 쉬며 산의 절경도 감상할 수 있어 마음 에 넉넉함을 가져오게 한다. 지름티재로의
+                                하산은 위험하므로 지름티재 갈림길에서 계속 북쪽 능선을 타고 10분정도 내려가면 자연석으로 쌓은 성터가 있는데 성의 용도가 고증이 되지 않 고 있지만 동쪽 경북지역을
+                                대궐터라 부르는데, 아마도 삼국시대의 전시에 피난처로 이용된 것이 아니였나 하는 생각이 든다. 성재에서 길은 북서쪽으로 급한 경사길이다. 5분정도 미끄러 지듯
+                                내려오면 다시 산길은 소나무 참나무로 하늘을 가린 계곡길이다.
+                            </P>
+                            <P>
+                                성재를 떠난지 30분정도면 높이 2미터의 희양폭포에 닿게 된다. 물이 흐를 때에는 보기가 좋 지만 건폭으로 있는 날이 더 많다. 폭포에서 10분정도 임도를 따라 걸으면 인삼밭 언덕에 이 르게 되고, 농로 길을 따라 20분정도
+                                더 걸으면 은티마을에 닿게 된다. 겨울철이나 비가 올 때 지름티재로 오르는 코스가 위험하므로 성재로 올랐다 그 길로 다시 하산하는 것이 안전하다.
+                            </P>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <button type="button" class="icon schedule" onclick="location.href='app://place3'">
+                            <span>스케쥴</span>
+                        </button>
+                        <button type="button" class="icon close">
+                            <span>닫기</span>
+                        </button>
+                        <a href="#" class="itemLink">
+                            <div class="title">조항산(鳥項山)</div>
+                            <div class="img">
+                                <img src="images/page3/johang.jpg" alt="">
+                            </div>
+                            <div class="phone">전화 : 043-830-3421</div>
+                        </a>
+                        <div class="cont">
+                            <p>
+                                청천면 삼송리와 경북 문경군 농암면 궁기리 사이에 솟아있는 산으로 백두대간 주능선상의 대야산과 청화산 사이에 위치하고 있다. </p>
+
+                            <p>
+                                조항산을 오르기 전 삼송리에는 일명 용송이라 불리는 소나무가 우뚝 서있는데 이 소나무는 밑둥둘레가 약 5미터나 되는데 높이 15미터에 가지를 드리운 폭이 20미터가 넘는다. 줄기 모 습이 마치 용이 꿈틀거리는 듯 보인다
+                                하여 용송이라는 이름이 붙었다. 또한 주변에 아름드리 노송 20여주를 부하처럼 거느리고 있어 왕소나무로 불리기도 한다. 천연기념물 제 290호로 지 정된 이 노거수의
+                                수령은 약 600여년쯤으로 추정된다.
+                            </p>
+
+
+                            <p>
+                                삼송리에서 용송을 뒤로 하고 논길을 따라 10여분을 걸어가면 저수지 둑 아래에 닿게 된다. 저수지에 올라 저수지 갓길을 따라 S자 코스로 20여분 정도 돌아 저수지 끝까지 가면 임도가 시작되는 Y자 갈림길이 나온다.
+                                이 Y자 갈림길에서 왼쪽길을 택해 임도를 따라 40여분 정도 올라가다 정상을 보면 갓바윗재가 보인다. 그곳에서 갓바윗재 쪽으로 30여분 오르면 갓바윗재 에 닿게
+                                되고, 이 갓바윗재에서 왼쪽 능선길로 40여분 정도 오르면 헬기장이 나오고 정상까지 는 약 1km정도에 불과하지만 정상으로 이어지는 주능선상에 마치 낙타등처럼
+                                보이는 암릉지 대가 이어지기 때문에 1시간 이상 소요된다.
+                            </p>
+
+                            <p>
+                                조항산 정상에서의 조망은 마치 하늘 위에 오른 기분이다. 정선 북쪽으로는 대야산과 둔덕산 줄기너머로 군자산, 장성봉, 희양산이 보이고 장성봉, 희양산 너머로는 월악산과 주흘산이 겹 겹이 시야에 들어와 장관을 이룬다.
+                                정상에서 동으로는 문경시 농암면의 높고 낮은 산과 골짜 기가 어우러져 주름치마를 보는 듯 하다. 남으로의 조망도 기경이다. 청화산과 시루봉의 능선 너머로 속리산
+                                주능선이 마치 톱날인 듯 바라보이고 서쪽으로는 백악산 줄기가 한폭의 그림 인 듯 아름답게 시야에 들어온다.
+                            </p>
+
+
+                            <p>
+                                정상에서의 하산은 일단 북능을 따라 600미터쯤 내려선 다음 789봉을 경유해 저수지 북쪽 오 솔길로 내려서는 능선길을 이용해 하산하면 된다. 옥양동을 출발 의상저수지 북쪽 오솔길을 경유 임도를 지나 갓바윗재를 경유해
+                                정상을 다녀오는 총 산행 거리는 약 13km로 산행시간은 6시간 30분가량 소요된다.
+                            </p>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <button type="button" class="icon schedule" onclick="location.href='app://place4'">
+                            <span>스케쥴</span>
+                        </button>
+                        <button type="button" class="icon close">
+                            <span>닫기</span>
+                        </button>
+                        <a href="#" class="itemLink">
+                            <div class="title">쌍곡계곡</div>
+                            <div class="img">
+                                <img src="images/page3/ssanggok.jpg" alt="">
+                            </div>
+                            <div class="phone">전화 : 043-832-5550</div>
+                        </a>
+                        <div class="cont">
+                            <p>
+                                쌍곡구곡은 산수가 아름다워 퇴계 이황, 송강 정철등 많은 유학자와 문인들이 즐겨 찾던 곳으 로 주위에는 보배산, 칠보산, 군자산, 비학산 등 산행을 즐길수 있는 명산이 많이 있다. 쌍곡구 곡의 울창한 노송의 숲과 기암계곡
+                                사이로 흐르는 맑은 물은 호롱소, 소금강, 떡바위, 문수암, 쌍벽, 용소, 쌍곡폭포, 선녀탕, 장암 등의 쌍곡구곡을 이루고 있다.
+                            </p>
+
+                            <p>
+                                쌍곡제1곡인 호롱소는 넓고 잔잔한 호소 주위에 노송이 어우러져 아름다운 경치를 자아내고 있으며 근처 바위에 호롱불처럼 생긴 바위가 있어 호롱소라 불리는 곳이다.
+                            </p>
+                            <p>
+                                쌍곡제2곡인 소금강은 쌍곡구곡 중 극치를 이루는 곳으로 마치 금강산의 일부를 옮겨놓은 듯 하여 소금강이라 불리우며, 계절마다 모습을 달리하는 독특한 절경과 밑으로 흐르는 맑은 계 곡수가 장관이다.
+                            </p>
+                            <p>
+                                쌍곡제3곡인 떡바위는 바위 모양이 시루떡을 자른것처럼 생겼으며, 이 바위 근처에 살면 먹을 것을 걱정 안해도 된다는 전설로 사람들이 모여살기 시작했다고 한다.
+                            </p>
+                            <p>
+                                쌍곡제4곡인 문수암은 칠보산 산행 입구에서 만날 수 있는 웅장한 바위이다.
+                            </p>
+                            <p>
+                                쌍곡제5곡인 쌍벽은 계곡의 양쪽에 마치 깍아 세운 듯한 10m높이의 바위가 5m정도의 폭을 두고 평행으로 이어져 있다.
+                            </p>
+                            <p>
+                                쌍곡제6곡인 용소는 옛날에 용이 승천하였하여 명주실 한꾸러미가 다 풀릴만큼 깊은 소였다 고하여 붙여진 것이다.
+                            </p>
+                            <p>
+                                쌍곡제7곡인 쌍곡폭포는 수줍은 촌색시처럼 여성적인 폭포가 반석을 타고 200여평의 호소로 펼쳐져 흘러 간담을 서늘하게 한다.
+                            </p>
+                            <p>
+                                쌍곡제8곡인 선녀탕은 선녀들이 달밤이면 목욕하러 내려왔다는 전설의 선녀탕.
+                            </p>
+                            <p>
+                                쌍곡제9곡인 장암은 쌍곡의 최상류에 위치한 것이다.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <button type="button" class="icon schedule" onclick="location.href='app://place5'">
+                            <span>스케쥴</span>
+                        </button>
+                        <button type="button" class="icon close">
+                            <span>닫기</span>
+                        </button>
+                        <a href="#" class="itemLink">
+                            <div class="title">선유구곡</div>
+                            <div class="img">
+                                <img src="images/page3/sunyou.jpg" alt="">
+                            </div>
+                            <div class="phone">전화 : 043-832-4347</div>
+                        </a>
+                        <div class="cont">
+                            <p>
+                                조선시대 유명한 학자 퇴계 이황이 7송정(현 송면리 송정마을)에 있는 함평 이씨댁을 찾아갔 다가 산과 물, 바위, 노송 등이 잘 어우러진 절묘한 경치에 반하여 9달을 돌아다니며 9곡의 이 름을 지어 새겼는데 오랜 세월이
+                                지나는 동안 글자는 없어지고 산천만이 남아있다.
+                            </p>
+                            <p>
+                                선유동문은 백척이 넘는 높은 바위에 새새마다 여러 구멍이 방을 이루고 있다. 경천벽은 화양 동의 경천벽에 비하면 여성적인 미를 간직하고 있다. 절벽의 높이가 수백척이며 바위층이 첩 첩이 되어 하늘의 지붕인듯 길게 뻗어있다.
+                            </p>
+                            <p>
+                                학소암은 하늘에 치솟아 그 사이로 소나무가 조밀하게 만들어져 있으며,푸른 학이 둥지를 틀 어었다고 한다.
+                            </p>
+                            <p>
+                                연단로는 연단로 평평하고 가운데가 절구처럼 패여있어 신선들이 이곳에서 금단을 만들어 먹 고 장수하였다고 한다.
+                            </p>
+                            <p>
+                                와룡폭은 용이 물을 내뿜는 듯이 쏟아내는 물소리가 벼락치듯 하고 흩어지는 물은 안개를 이 루어 장관이라고 한다.
+                            </p>
+                            <p>
+                                난가대는 옛날 나뭇꾼이 나무를 하러 가다 바위 위에서 신선들이 바둑 두며 노니는 것을 구경 하다 보니 세월이 흘러 도끼자루가 썩어 없어졌다하여 난가대라고 한다.
+                            </p>
+                            <p>
+                                기국암은 바위가 평평한 바둑판 모양으로 신선들이 바둑을 두고 있어 나뭇꾼이 구경하다 집 으로 돌아와 보니 5대손이 살고 있다는 전설이 있다.
+                            </p>
+                            <p>
+                                구암은 바위 생김이 마치 큰 거북이가 머리를 들어 숨을 쉬는 듯하여 붙여졌다.
+                            </p>
+                            <p>
+                                은선암은 두 개의 바위가 양쪽으로 서 있으며 그 사이로 10여명이 들어갈수 있을 만큼 넓고 옛날에는 퉁소를 불며달을 휘롱하던 신선이 이곳에 머물렀다고 해서 붙여진 이름이다.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -146,10 +287,10 @@
     </div>
 -->
     <script>
-        $('.page3 .list .item a.itemLink').on('click',function(){
+        $('.page3 .list .item a.itemLink').on('click', function () {
             $(this).parent().addClass("detail");
         });
-        $('.page3 .list .item .close').on('click',function(){
+        $('.page3 .list .item .close').on('click', function () {
             $(this).parent().removeClass("detail");
         });
     </script>
