--- a/180326/chungnam/page2.html
+++ b/180326/chungnam/page2.html
@@ -55,7 +55,9 @@
                         <div class="swiper-slide" data-img="01_02.jpg">음악분수대</div>
                         <div class="swiper-slide" data-img="01_01.jpg">영춘재</div>
                     </div>
-                    <div class="mapAPI"></div>
+                </div>
+                <div class="mapAPI">
+                    <div id="map" style="width:100%;height:100%;"></div>
                 </div>
                 <div class="linkDetail">
                     <div class="img">
@@ -63,7 +65,9 @@
                     </div>
                     <div class="tit">대통령 기념관</div>
                     <a href="page1.html#slide3" class="btn">상세보기</a>
-                    <a href="#" class="icon close"><span>닫기</span></a>
+                    <a href="#" class="icon close">
+                        <span>닫기</span>
+                    </a>
                 </div>
             </main>
         </div>
@@ -112,27 +116,142 @@
         // tabContents.controller.control = tabMenu;
         // tabMenu.controller.control = tabContents;
         tabMenu.on('tap', function () {
+
+            panTo(this.activeIndex);
             var textTit;
             var textLink;
             var imgsrc;
-            var $activeSlide=$('.tabMenu .swiper-slide').eq(this.activeIndex);
+            var $activeSlide = $('.tabMenu .swiper-slide').eq(this.activeIndex);
             $('.tabMenu .swiper-slide').removeClass("active");
             console.log(this.activeIndex);
             $activeSlide.addClass("active");
-            textTit =$activeSlide.text();
-            textLink = "page1.html#slide"+(this.activeIndex+1);
-            imgsrc = "images/page1/"+$activeSlide.attr("data-img");
+            textTit = $activeSlide.text();
+            textLink = "page1.html#slide" + (this.activeIndex + 1);
+            imgsrc = "images/page1/" + $activeSlide.attr("data-img");
 
-            $('.linkDetail img').attr("src",imgsrc);
+            $('.linkDetail img').attr("src", imgsrc);
             $('.linkDetail .tit').text(textTit);
-            $('.linkDetail .btn').attr("href",textLink);
-            $('.linkDetail').css("bottom","0px");
-            
+            $('.linkDetail .btn').attr("href", textLink);
+            $('.linkDetail').css("bottom", "0px");
+
         });
-        $('.linkDetail .close').on('click',function(){
-            $('.linkDetail').css("bottom","-120px");
+        $('.linkDetail .close').on('click', function () {
+            $('.linkDetail').css("bottom", "-120px");
         });
 
+    </script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e2268993decb92bbce5d76935890bcb5"></script>
+    <script>
+        var mapContainer = document.getElementById('map'), // 지도를 표시할 div  
+            mapOption = {
+                center: new daum.maps.LatLng(36.4623822, 127.4730684), // 지도의 중심좌표
+                level: 2 // 지도의 확대 레벨
+            };
+
+        var map = new daum.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+
+        // 마커를 표시할 위치와 title 객체 배열입니다 
+        var positions = [
+            {
+                title: '대통령기념관',
+                latlng: new daum.maps.LatLng(36.4623822, 127.4730684)
+            },
+            {
+                title: '하늘정원',
+                latlng: new daum.maps.LatLng(36.4630919, 127.4742286)
+            },
+            {
+                title: '국화축제',
+                latlng: new daum.maps.LatLng(36.4623822, 127.4730684)
+            },
+            {
+                title: '청남대본관',
+                latlng: new daum.maps.LatLng(36.4598479, 127.4709495)
+            },
+            {
+                title: '전망대',
+                latlng: new daum.maps.LatLng(36.4599278, 127.4862119)
+            },
+            {
+                title: '대통령광장',
+                latlng: new daum.maps.LatLng(36.4574269, 127.4755419)
+            },
+            {
+                title: '돌탑',
+                latlng: new daum.maps.LatLng(36.462184, 127.4724505)
+            },
+            {
+                title: '음악분수대',
+                latlng: new daum.maps.LatLng(36.4623822, 127.4730684)
+            },
+            {
+                title: '영춘재',
+                latlng: new daum.maps.LatLng(36.4623822, 127.4730664)
+            }
+
+
+        ];
+
+        // 마커 이미지의 이미지 주소입니다
+        var imageSrc = "http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
+
+        for (var i = 0; i < positions.length; i++) {
+
+            // 마커 이미지의 이미지 크기 입니다
+            var imageSize = new daum.maps.Size(24, 35);
+
+            // 마커 이미지를 생성합니다    
+            var markerImage = new daum.maps.MarkerImage(imageSrc, imageSize);
+
+            // 마커를 생성합니다
+            var marker = new daum.maps.Marker({
+                map: map, // 마커를 표시할 지도
+                position: positions[i].latlng, // 마커를 표시할 위치
+                title: positions[i].title, // 마커의 타이틀, 마커에 마우스를 올리면 타이틀이 표시됩니다
+                image: markerImage // 마커 이미지 
+            });
+        }
+
+        var map = new daum.maps.Map(container, options);
+        function panTo(idx) {
+            // 이동할 위도 경도 위치를 생성합니다 
+            switch (idx) {
+                case 0: // 대통령 기념관 
+                    var moveLatLon = new daum.maps.LatLng(36.4623822, 127.4730684)
+                    break;
+                case 1: // 하늘정원
+                    var moveLatLon = new daum.maps.LatLng(36.4630919, 127.4742286)
+                    break;
+                case 2: // 국화축제
+                    var moveLatLon = new daum.maps.LatLng(36.4623822, 127.4730684)
+                    break;
+                case 3: // 청남대본관
+                    var moveLatLon = new daum.maps.LatLng(36.4598479, 127.4709495)
+                    break;
+                case 4: // 전망대
+                    var moveLatLon = new daum.maps.LatLng(36.4599278, 127.4862119)
+                    break;
+                case 5: // 대통령광장
+                    var moveLatLon = new daum.maps.LatLng(36.4574269, 127.4755419)
+                    break;
+                case 6: // 돌탑
+                    var moveLatLon = new daum.maps.LatLng(36.462184, 127.4724505)
+                    break;
+                case 7: // 음악분수대
+                    var moveLatLon = new daum.maps.LatLng(36.4623822, 127.4730684)
+                    break;
+                case 8: // 영춘재
+                    var moveLatLon = new daum.maps.LatLng(36.4623822, 127.4730664)
+                    break;
+
+            }
+
+
+
+            // 지도 중심을 부드럽게 이동시킵니다
+            // 만약 이동할 거리가 지도 화면보다 크면 부드러운 효과 없이 이동합니다
+            map.panTo(moveLatLon);
+        }       
     </script>
 </body>
 
