페이지에 전화 기능 추가

--- a/180326/chungnam/page3.html
+++ b/180326/chungnam/page3.html
@@ -56,7 +56,7 @@
                             <div class="img">
                                 <img src="images/page3/yakhwi_01.jpg" alt="">
                             </div>
-                            <div class="phone">전화 : 043-830-3421</div>
+                            <a class="phone" href="tel:043-830-3421">전화 : 043-830-3421</a>
                         </a>
                         <div class="cont">
                             <p>악휘봉은 괴산군 연풍면과 칠성면 경계에 위치한 해발 845m의 산으로 백두대간의 본 줄기에서 한발짝 벗어난 절경의 산이다.</p>
@@ -96,7 +96,7 @@
                             <div class="img">
                                 <img src="images/page3/huiyang.jpg" alt="">
                             </div>
-                            <div class="phone">전화 : 043-830-3421</div>
+                            <a class="phone" href="tel:043-830-3421">전화 : 043-830-3421</a>
                         </a>
                         <div class="cont">
                             <P>
@@ -136,7 +136,7 @@
                             <div class="img">
                                 <img src="images/page3/johang.jpg" alt="">
                             </div>
-                            <div class="phone">전화 : 043-830-3421</div>
+                            <a class="phone" href="tel:043-830-3421">전화 : 043-830-3421</a>
                         </a>
                         <div class="cont">
                             <p>
@@ -182,7 +182,7 @@
                             <div class="img">
                                 <img src="images/page3/ssanggok.jpg" alt="">
                             </div>
-                            <div class="phone">전화 : 043-832-5550</div>
+                            <a class="phone" href="tel:043-832-5550">전화 : 043-832-5550</a>
                         </a>
                         <div class="cont">
                             <p>
@@ -231,7 +231,7 @@
                             <div class="img">
                                 <img src="images/page3/sunyou.jpg" alt="">
                             </div>
-                            <div class="phone">전화 : 043-832-4347</div>
+                            <a class="phone" href="tel:043-832-4347">전화 : 043-832-4347</a>
                         </a>
                         <div class="cont">
                             <p>
