--- a/portfolio01/index.html
+++ b/portfolio01/index.html
@@ -17,9 +17,13 @@
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <!--jquery library CDN-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
+
     <script type="text/javascript" src="js/sidebar.min.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
+    <!--Use Swiper from CDN-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.0/css/swiper.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.0/js/swiper.min.js"></script>
 </head>
 
 <body>
@@ -35,6 +39,15 @@
                 <li><a href="#">STORE</a></li>
                 <li><a href="#">CUSTOMER</a></li>
             </ul>
+            <div class="navi2">
+                <ul>
+                    <li><a href="#">CAFFE PASCUCCI</a></li>
+                    <li><a href="#">MENU</a></li>
+                    <li><a href="#">EVENT&TALK</a></li>
+                    <li><a href="#">STORE</a></li>
+                    <li><a href="#">CUSTOMER</a></li>
+                </ul>
+            </div>
         </div>
     </header>
     <nav>
@@ -70,8 +83,33 @@
 
     <section class="menuSection">
         <div>
-            <div class="cake"><img src="img/menu02.png"></div>
-            <div class="coffee"></div>
+            <div class="cake clearBox">
+                <!-- <img src="img/menu02.png"> -->
+                <div>
+                    <div class="swiper-container tabMenu">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">11111111111</div>
+                            <div class="swiper-slide">22222222222</div>
+                            <div class="swiper-slide">33333333333</div>
+                            <div class="swiper-slide">44444444444</div>
+                            <div class="swiper-slide">55555555555</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="coffee">
+                <div>
+                    <div class="swiper-container tabMenu">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">11111111111</div>
+                            <div class="swiper-slide">22222222222</div>
+                            <div class="swiper-slide">33333333333</div>
+                            <div class="swiper-slide">44444444444</div>
+                            <div class="swiper-slide">55555555555</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -79,16 +117,65 @@
         <div class="backImg">
             <h2>New Product</h2>
             <div class="circleBox">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+                <div class="circle">
+                    <!-- <div><img src="img/new01.png" alt=""></div> -->
+                </div>
+                <div class="circle">
+                    <!-- <div><img src="img/new02.png" alt=""></div> -->
+                </div>
+                <div class="circle">
+                    <!-- <div><img src="img/untitled-1.png" alt=""></div> -->
+                </div>
             </div>
         </div>
         
     </section>
-    <section class="sns"></section>
-    <section class="map"></section>
+    <section class="sns">
+        <h2><img src="img/SNS01.png"></h2>
+        <div class="snsImg clearBox">
+            <div><div><img src="img/sns_01.png"></div></div>
+            <div><div><img src="img/sns_02.png"></div></div>
+            <div><div><img src="img/sns_03.png"></div></div>
+            <span>more...</span>
+        </div>
+    </section>
+    <section class="map">
+        <div class="backgroundImg clearBox">
+            <div class="mapLeft"></div>
+            <div class="mapRight"></div>
+        </div>
+    </section>
     <footer class="footer"></footer>
+
+
+
+    <script type="text/javascript">
+        var swiperImages1 = new Swiper('.swiper-images', {
+            pagination: {
+                el: '.swiper-pagination',
+            },
+        });
+        var tabContents = new Swiper('.tabContents', {
+            spaceBetween: 10,
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+        });
+        var tabMenu = new Swiper('.tabMenu', {
+            spaceBetween: 30,
+            centeredSlides: false,
+            slidesPerView: 'auto',
+            touchRatio: 0.5,
+            slideToClickedSlide: true,
+            normalizeSlideIndex: false,
+            slidesOffsetBefore: 50,
+            slidesOffsetAfter: 50,
+        });
+        // tabContents.controller.control = tabMenu;
+        // tabMenu.controller.control = tabContents;
+
+    </script>
 </body>
 
 </html>
