사진 및 상세설명 추가

--- a/180326/chungnam/page2.html
+++ b/180326/chungnam/page2.html
@@ -46,14 +46,14 @@
                 <div class="swiper-container tabMenu">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide" data-img="01_01.jpg">대통령 기념관</div>
-                        <div class="swiper-slide" data-img="01_02.jpg">하늘정원</div>
-                        <div class="swiper-slide" data-img="01_01.jpg">국화축제</div>
-                        <div class="swiper-slide" data-img="01_02.jpg">청남대본관</div>
-                        <div class="swiper-slide" data-img="01_01.jpg">전망대</div>
-                        <div class="swiper-slide" data-img="01_02.jpg">대통령광장</div>
-                        <div class="swiper-slide" data-img="01_01.jpg">돌탑</div>
-                        <div class="swiper-slide" data-img="01_02.jpg">음악분수대</div>
-                        <div class="swiper-slide" data-img="01_01.jpg">영춘재</div>
+                        <div class="swiper-slide" data-img="02_01.jpg">하늘정원</div>
+                        <div class="swiper-slide" data-img="03_01.jpg">국화축제</div>
+                        <div class="swiper-slide" data-img="04_01.jpg">청남대본관</div>
+                        <div class="swiper-slide" data-img="05_01.jpg">전망대</div>
+                        <div class="swiper-slide" data-img="06_01.jpg">대통령광장</div>
+                        <div class="swiper-slide" data-img="07_01.jpg">돌탑</div>
+                        <div class="swiper-slide" data-img="08_01.jpg">메타세콰이어 숲 쉼터</div>
+                        <div class="swiper-slide" data-img="09_01.jpg">영춘재</div>
                     </div>
                 </div>
                 <div class="mapAPI">
