--- a/180326/chungnam/page1.html
+++ b/180326/chungnam/page1.html
@@ -51,7 +51,7 @@
                         <div class="swiper-slide" data-hash="slide5">전망대</div>
                         <div class="swiper-slide" data-hash="slide6">대통령광장</div>
                         <div class="swiper-slide" data-hash="slide7">돌탑</div>
-                        <div class="swiper-slide" data-hash="slide8">음악분수대</div>
+                        <div class="swiper-slide" data-hash="slide8">메타세콰이어 숲 쉼터</div>
                         <div class="swiper-slide" data-hash="slide9">영춘재</div>
                     </div>
                 </div>
@@ -92,17 +92,25 @@
                                 <!-- Swiper -->
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="images/page1/01_01.jpg" alt="대통령기념관 1">
+                                        <img src="images/page1/02_01.jpg" alt="하늘정원 1">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/page1/01_02.jpg" alt="대통령기념관 2">
+                                        <img src="images/page1/02_02.jpg" alt="하늘정원 2">
                                     </div>
                                 </div>
                                 <!-- Add Pagination -->
                                 <div class="swiper-pagination"></div>
                             </div>
-                            <div class="comment"></div>
-                            <div class="map"></div>
+                            <div class="comment">
+                                2008년 10월 개장한 1,590㎡ 면적에 파고라와 망원경이 설치되어 있고 
+                                교목·관목·지피류 등 28종 9천본이 식재된 옥상 휴식공간이다.
+                            </div>
+                            <div class="map">
+                                <a href="http://map.daum.net/?urlX=610362&urlY=823746&urlLevel=3&map_type=TYPE_MAP&map_hybrid=false&SHOWMARK=true" target="_blank">
+                                    <span style="background:#000;position:absolute;width:100%;opacity:.7;filter:alpha(opacity=70);color:#fff;overflow:hidden;font:12px/1.5 Dotum, '돋움', sans-serif;text-decoration:none;padding:7px 0px 0px 10px; height: 24px;">지도를 클릭하시면 위치정보를 확인하실 수 있습니다.</span>
+                                    <img width="100%" src="http://map2.daum.net/map/mapservice?MX=610362&MY=823746&SCALE=2.5&IW=565&IH=308&COORDSTM=WCONGNAMUL" style="border:1px solid #ccc">
+                                </a>
+                            </div>
                         </div>
                         <div class="swiper-slide" data-hash="slide3">
                             <h2 class="title">국화축제</h2>
@@ -110,17 +118,24 @@
                                 <!-- Swiper -->
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="images/page1/01_01.jpg" alt="대통령기념관 1">
+                                        <img src="images/page1/03_01.jpg" alt="국화축제 1">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/page1/01_02.jpg" alt="대통령기념관 2">
+                                        <img src="images/page1/03_02.jpg" alt="국화축제 2">
                                     </div>
                                 </div>
                                 <!-- Add Pagination -->
                                 <div class="swiper-pagination"></div>
                             </div>
-                            <div class="comment"></div>
-                            <div class="map"></div>
+                            <div class="comment">
+                                한국관광 100선, 국민관광지 청남대 가을축제 국화춘제 단풍은 머물GO, 국향은 오라 GO!!
+                            </div>
+                            <div class="map">
+                                <a href="http://map.daum.net/?urlX=609968&urlY=823766&urlLevel=3&map_type=TYPE_MAP&map_hybrid=false&SHOWMARK=true" target="_blank">
+                                    <span style="background:#000;position:absolute;width:100%;opacity:.7;filter:alpha(opacity=70);color:#fff;overflow:hidden;font:12px/1.5 Dotum, '돋움', sans-serif;text-decoration:none;padding:7px 0px 0px 10px; height: 24px;">지도를 클릭하시면 위치정보를 확인하실 수 있습니다.</span>
+                                    <img width="100%" src="http://map2.daum.net/map/mapservice?MX=609968&MY=823766&SCALE=2.5&IW=565&IH=308&COORDSTM=WCONGNAMUL" style="border:1px solid #ccc">
+                                </a>
+                            </div>
                         </div>
                         <div class="swiper-slide" data-hash="slide4">
                             <h2 class="title">청남대본관</h2>
@@ -128,17 +143,26 @@
                                 <!-- Swiper -->
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="images/page1/01_01.jpg" alt="대통령기념관 1">
+                                        <img src="images/page1/04_01.jpg" alt="청남대본관 1">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/page1/01_02.jpg" alt="대통령기념관 2">
+                                        <img src="images/page1/04_02.jpg" alt="청남대본관 2">
                                     </div>
                                 </div>
                                 <!-- Add Pagination -->
                                 <div class="swiper-pagination"></div>
                             </div>
-                            <div class="comment"></div>
-                            <div class="map"></div>
+                            <div class="comment">
+                                지상2층, 지하1층, 연면적 2,699㎡ 규모로 1층은 회의실, 접견실, 식당, 손님실이 있고 
+                                2층은 대통령전용공간으로 침실, 서재, 거실, 식당, 가족실, 한실 등이 있으며 다섯분의 
+                                대통령이 88회 이용한 국내유일의 대통령휴양시설이다.
+                            </div>
+                            <div class="map">
+                                <a href="http://map.daum.net/?urlX=609462&urlY=822962&urlLevel=3&map_type=TYPE_MAP&map_hybrid=false&SHOWMARK=true" target="_blank">
+                                    <span style="background:#000;position:absolute;width:100%;opacity:.7;filter:alpha(opacity=70);color:#fff;overflow:hidden;font:12px/1.5 Dotum, '돋움', sans-serif;text-decoration:none;padding:7px 0px 0px 10px; height: 24px;">지도를 클릭하시면 위치정보를 확인하실 수 있습니다.</span>
+                                    <img width="100%" src="http://map2.daum.net/map/mapservice?MX=609462&MY=822962&SCALE=2.5&IW=565&IH=308&COORDSTM=WCONGNAMUL" style="border:1px solid #ccc">
+                                </a>
+                            </div>
                         </div>
                         <div class="swiper-slide" data-hash="slide5">
                             <h2 class="title">전망대</h2>
@@ -146,17 +170,29 @@
                                 <!-- Swiper -->
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="images/page1/01_01.jpg" alt="대통령기념관 1">
+                                        <img src="images/page1/05_01.jpg" alt="전망대 1">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/page1/01_02.jpg" alt="대통령기념관 2">
+                                        <img src="images/page1/05_02.jpg" alt="전망대 2">
                                     </div>
                                 </div>
                                 <!-- Add Pagination -->
                                 <div class="swiper-pagination"></div>
                             </div>
-                            <div class="comment"></div>
-                            <div class="map"></div>
+                            <div class="comment">
+                                2009년 건립된 '청남대 전망대'에 올라보면, 한눈에 내려다 보이는 청남대와 이를 둘러싼 
+                                대청호반의 조화로운 경관에 경탄을 금치 못할 것이다. 그래서 내륙의 다도해로 불리운다. 
+                                날씨가 맑은 날이면 청남대 전경은 물론 신탄진과 대전까지 내려다 볼 수 있어, 
+                                일상에서의 답답함을 해소하고 분위기를 전환해볼 수 있는 최적의 장소이다. 
+                                전망대에 오르는 645개의 목재 계단은 관람객의 행운과 기쁨을 기원하는 의미로 
+                                "청남대 행복의 계단" 이라 불린다.
+                            </div>
+                            <div class="map">
+                                <a href="http://map.daum.net/?urlX=611097&urlY=823777&urlLevel=3&map_type=TYPE_MAP&map_hybrid=false&SHOWMARK=true" target="_blank">
+                                    <span style="background:#000;position:absolute;width:100%;opacity:.7;filter:alpha(opacity=70);color:#fff;overflow:hidden;font:12px/1.5 Dotum, '돋움', sans-serif;text-decoration:none;padding:7px 0px 0px 10px; height: 24px;">지도를 클릭하시면 위치정보를 확인하실 수 있습니다.</span>
+                                    <img width="100%" src="http://map2.daum.net/map/mapservice?MX=611097&MY=823777&SCALE=2.5&IW=565&IH=308&COORDSTM=WCONGNAMUL" style="border:1px solid #ccc">
+                                </a>
+                            </div>
                         </div>
                         <div class="swiper-slide" data-hash="slide6">
                             <h2 class="title">대통령광장</h2>
@@ -164,17 +200,28 @@
                                 <!-- Swiper -->
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="images/page1/01_01.jpg" alt="대통령기념관 1">
+                                        <img src="images/page1/06_01.jpg" alt="대통령광장 1">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/page1/01_02.jpg" alt="대통령기념관 2">
+                                        <img src="images/page1/06_02.jpg" alt="대통령광장 2">
                                     </div>
                                 </div>
                                 <!-- Add Pagination -->
                                 <div class="swiper-pagination"></div>
                             </div>
-                            <div class="comment"></div>
-                            <div class="map"></div>
+                            <div class="comment">
+                                대통령광장은 대한민국 역대 대통령의 모습을 기리고자 이승만, 윤보선, 박정희, 최규하, 
+                                전두환, 노태우, 김영삼, 김대중, 노무현 대통령의 모습을 청동상으로 제작 설치하였으며, 
+                                광장내에는 청와대, 백악관, 버킹엄궁 등 세계 9개국 대통령궁 또는 왕궁의 사진이 들어간 
+                                타일 벽화를 2009년도에 준공하였다.
+
+                            </div>
+                            <div class="map">
+                                <a href="http://map.daum.net/?urlX=610447&urlY=822272&urlLevel=3&map_type=TYPE_MAP&map_hybrid=false&SHOWMARK=true" target="_blank">
+                                    <span style="background:#000;position:absolute;width:100%;opacity:.7;filter:alpha(opacity=70);color:#fff;overflow:hidden;font:12px/1.5 Dotum, '돋움', sans-serif;text-decoration:none;padding:7px 0px 0px 10px; height: 24px;">지도를 클릭하시면 위치정보를 확인하실 수 있습니다.</span>
+                                    <img width="100%" src="http://map2.daum.net/map/mapservice?MX=610447&MY=822272&SCALE=2.5&IW=565&IH=308&COORDSTM=WCONGNAMUL" style="border:1px solid #ccc">
+                                </a>
+                            </div>
                         </div>
                         <div class="swiper-slide" data-hash="slide7">
                             <h2 class="title">돌탑</h2>
@@ -182,35 +229,52 @@
                                 <!-- Swiper -->
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="images/page1/01_01.jpg" alt="대통령기념관 1">
+                                        <img src="images/page1/07_01.jpg" alt="돌탑 1">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/page1/01_02.jpg" alt="대통령기념관 2">
+                                        <img src="images/page1/07_02.jpg" alt="돌탑 2">
                                     </div>
                                 </div>
                                 <!-- Add Pagination -->
                                 <div class="swiper-pagination"></div>
                             </div>
-                            <div class="comment"></div>
-                            <div class="map"></div>
+                            <div class="comment">
+                                청남대의 충청북도 이관을 기념하기 위해 문의면 32개 마을 주민수와 같은 5,800개의 돌로 쌓였다.
+                                주민의 단합을 뜻하는 형태로 2003. 4. 18 개방행사시 노무현 대통령이 참석한 가운데 제막을 가졌다.
+                            </div>
+                            <div class="map">
+                                <a href="http://map.daum.net/?urlX=609767&urlY=823447&urlLevel=3&map_type=TYPE_MAP&map_hybrid=false&SHOWMARK=true" target="_blank">
+                                    <span style="background:#000;position:absolute;width:100%;opacity:.7;filter:alpha(opacity=70);color:#fff;overflow:hidden;font:12px/1.5 Dotum, '돋움', sans-serif;text-decoration:none;padding:7px 0px 0px 10px; height: 24px;">지도를 클릭하시면 위치정보를 확인하실 수 있습니다.</span>
+                                    <img width="100%" src="http://map2.daum.net/map/mapservice?MX=609767&MY=823447&SCALE=2.5&IW=565&IH=308&COORDSTM=WCONGNAMUL" style="border:1px solid #ccc">
+                                </a>
+                            </div>
                         </div>
                         <div class="swiper-slide" data-hash="slide8">
-                            <h2 class="title">음악분수대</h2>
+                            <h2 class="title">메타세콰이어 숲 쉼터</h2>
                             <div class="swiper-images swiper-container">
                                 <!-- Swiper -->
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="images/page1/01_01.jpg" alt="대통령기념관 1">
+                                        <img src="images/page1/08_01.jpg" alt="메타세콰이어 숲 쉼터 1">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/page1/01_02.jpg" alt="대통령기념관 2">
+                                        <img src="images/page1/08_02.jpg" alt="메타세콰이어 숲 쉼터 2">
                                     </div>
                                 </div>
                                 <!-- Add Pagination -->
                                 <div class="swiper-pagination"></div>
                             </div>
-                            <div class="comment"></div>
-                            <div class="map"></div>
+                            <div class="comment">
+                                키가 70m까지 자라는 메타세콰이어 나무 숲은 84년도 부대원들에 의해 조성되었다.
+                                100여그루가 군사열을 하듯 질서정연하게 식재되었으며 주변엔 양어장 수질을 정화시키는 
+                                돌미나리, 부처꽃, 고랭이, 흑삼릉, 낙지다리 등이 식재되어있다.
+                            </div>
+                            <div class="map">
+                                <a href="http://map.daum.net/?urlX=609199&urlY=823348&urlLevel=3&map_type=TYPE_MAP&map_hybrid=false&SHOWMARK=true" target="_blank">
+                                    <span style="background:#000;position:absolute;width:100%;opacity:.7;filter:alpha(opacity=70);color:#fff;overflow:hidden;font:12px/1.5 Dotum, '돋움', sans-serif;text-decoration:none;padding:7px 0px 0px 10px; height: 24px;">지도를 클릭하시면 위치정보를 확인하실 수 있습니다.</span>
+                                    <img width="100%" src="http://map2.daum.net/map/mapservice?MX=609199&MY=823348&SCALE=2.5&IW=565&IH=308&COORDSTM=WCONGNAMUL" style="border:1px solid #ccc">
+                                </a>
+                            </div>
                         </div>
                         <div class="swiper-slide" data-hash="slide9">
                             <h2 class="title">영춘재</h2>
@@ -218,17 +282,25 @@
                                 <!-- Swiper -->
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="images/page1/01_01.jpg" alt="대통령기념관 1">
+                                        <img src="images/page1/09_01.jpg" alt="영춘재 1">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="images/page1/01_02.jpg" alt="대통령기념관 2">
+                                        <img src="images/page1/09_02.jpg" alt="영춘재 2">
                                     </div>
                                 </div>
                                 <!-- Add Pagination -->
                                 <div class="swiper-pagination"></div>
                             </div>
-                            <div class="comment"></div>
-                            <div class="map"></div>
+                            <div class="comment">
+                                - 주중공연 : 통키타/색소폰/그룹싸운드/댄스공연/국악/동호인재능기부공연...<br>
+                                - 주말공연 : 오케스트라공연/퓨전국악/댄스페스티벌/가요한마당
+                            </div>
+                            <div class="map">
+                                <a href="http://map.daum.net/?urlX=609968&urlY=823766&urlLevel=3&map_type=TYPE_MAP&map_hybrid=false&SHOWMARK=true" target="_blank">
+                                    <span style="background:#000;position:absolute;width:100%;opacity:.7;filter:alpha(opacity=70);color:#fff;overflow:hidden;font:12px/1.5 Dotum, '돋움', sans-serif;text-decoration:none;padding:7px 0px 0px 10px; height: 24px;">지도를 클릭하시면 위치정보를 확인하실 수 있습니다.</span>
+                                    <img width="100%" src="http://map2.daum.net/map/mapservice?MX=609968&MY=823766&SCALE=2.5&IW=565&IH=308&COORDSTM=WCONGNAMUL" style="border:1px solid #ccc">
+                                </a>
+                            </div>
                         </div>
                         <!-- 컨텐츠 끝 -->
                     </div>
